force-app/main/default/objects/Contact/fields/Comment_Body__c.field-meta.xml
<CustomField>
    <fullName>Comment_Body__c</fullName>
    <label>Comment Body</label>
    <type>TextArea</type>
</CustomField>