force-app/main/default/objects/Contact/fields/Drug_Name__c.field-meta.xml
<CustomField>
    <fullName>Drug_Name__c</fullName>
    <label>Drug Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>