force-app/main/default/objects/Contact/fields/Elixir_Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Elixir_Contact_Type__c</fullName>
    <description>The value in this field will be populated via a flow in the project.</description>
    <label>Elixir Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Elixir_Practitioner_Contact</fullName>
            </value>
            <value>
                <fullName>Elixir_Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>