force-app/main/default/objects/Contact/fields/Flow_date_time__c.field-meta.xml
<CustomField>
    <fullName>Flow_date_time__c</fullName>
    <label>Flow date/time</label>
    <type>DateTime</type>
</CustomField>