force-app/main/default/objects/Contact/fields/Form_Template__c.field-meta.xml
<CustomField>
    <fullName>Form_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form Template</label>
    <referenceTo>Form_Template__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>