force-app/main/default/objects/Contact/fields/Forms_For_Portal__c.field-meta.xml
<CustomField>
    <fullName>Forms_For_Portal__c</fullName>
    <label>Forms For Portal</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>