force-app/main/default/objects/Contact/fields/ID_Number__c.field-meta.xml
<CustomField>
    <fullName>ID_Number__c</fullName>
    <description>it is used to store the Practitioner&apos;s ID for CHC, it&apos;s the ID that hospital assigns to it&apos;s practitioner to uniquely identity them.</description>
    <label>ID Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>