force-app/main/default/objects/Contact/fields/Message_Comment_Body__c.field-meta.xml
<CustomField>
    <fullName>Message_Comment_Body__c</fullName>
    <label>Message Comment Body</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>