force-app/main/default/objects/Contact/fields/Practitioner_Id__c.field-meta.xml
<CustomField>
    <fullName>Practitioner_Id__c</fullName>
    <description>This field contains unique Practitioner&apos;s ObjId which is used for CHC callouts for order creation</description>
    <label>Practitioner Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>