force-app/main/default/objects/Contact/fields/Practitioner_NPI__c.field-meta.xml
<CustomField>
    <fullName>Practitioner_NPI__c</fullName>
    <label>Practitioner NPI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>