force-app/main/default/objects/Contact/fields/Tax_Id__c.field-meta.xml
<CustomField>
    <fullName>Tax_Id__c</fullName>
    <label>Practitioner Tax ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>