force-app/main/default/objects/Contact/fields/Taxonomy__c.field-meta.xml
<CustomField>
    <fullName>Taxonomy__c</fullName>
    <label>Practitioner Taxonomy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>