force-app/main/default/objects/Contact/recordTypes/Facilitator.recordType-meta.xml
<RecordType>
    <fullName>Facilitator</fullName>
    <active>true</active>
    <label>Facilitator</label>
</RecordType>