force-app/main/default/objects/Contact/validationRules/Address_Not_NULL.validationRule-meta.xml
<ValidationRule>
    <fullName>Address_Not_NULL</fullName>
    <active>false</active>
    <errorConditionFormula>IF(  MailingStreet =null || MailingStreet =&apos;&apos;|| MailingCity = null ||MailingCity = &apos;&apos;|| MailingState=null ||MailingState=&apos;&apos;|| MailingPostalCode = null || MailingPostalCode = &apos;&apos; || MailingCountry = null || MailingCountry=&apos;&apos; , true, false) &amp;&amp;  ISPICKVAL(ElixirSuite__Type__c, &apos;Guarantor&apos;)</errorConditionFormula>
    <errorMessage>Address fields should not be Empty</errorMessage>
</ValidationRule>