force-app/main/default/objects/Contact/validationRules/City_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>City_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>IF( MailingCity =null || MailingCity =&apos;&apos; , true, false)&amp;&amp; ISPICKVAL(ElixirSuite__Type__c, &apos;Guarantor&apos;)</errorConditionFormula>
    <errorDisplayField>MailingCity</errorDisplayField>
    <errorMessage>This field is mandatory.</errorMessage>
</ValidationRule>