force-app/main/default/objects/Contact/validationRules/DOB_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>DOB_validation</fullName>
    <active>false</active>
    <errorConditionFormula>IF( ISBLANK( Birthdate ), true, false) &amp;&amp;  ISPICKVAL(ElixirSuite__Type__c, &apos;Guarantor&apos;)</errorConditionFormula>
    <errorDisplayField>Birthdate</errorDisplayField>
    <errorMessage>This field is mandatory.</errorMessage>
</ValidationRule>