force-app/main/default/objects/Contact/validationRules/First_Name_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Name_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>IF(FirstName =null || FirstName =&apos;&apos;,true,false) &amp;&amp;  ISPICKVAL(ElixirSuite__Type__c, &apos;Guarantor&apos;) &amp;&amp;  ISPICKVAL(ElixirSuite__Type__c, &apos;Guarantor&apos;)</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>This field is mandatory.</errorMessage>
</ValidationRule>