force-app/main/default/objects/Contact/validationRules/Gender_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Gender_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>IF( ISPICKVAL(  ElixirSuite__Gender__c , &apos;&apos;) , true, false) &amp;&amp;  ISPICKVAL(ElixirSuite__Type__c, &apos;Guarantor&apos;)</errorConditionFormula>
    <errorDisplayField>ElixirSuite__Gender__c</errorDisplayField>
    <errorMessage>This field is mandatory.</errorMessage>
</ValidationRule>