force-app/main/default/objects/Contact/validationRules/GuarantorAccount.validationRule-meta.xml
<ValidationRule>
    <fullName>GuarantorAccount</fullName>
    <active>false</active>
    <errorConditionFormula>ISNULL( AccountId ) &amp;&amp;  ISPICKVAL(ElixirSuite__Type__c, &apos;Guarantor&apos;)</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>Mandatory Field</errorMessage>
</ValidationRule>