force-app/main/default/objects/Contact/validationRules/PhoneNotGreater_than_10.validationRule-meta.xml
<ValidationRule>
    <fullName>PhoneNotGreater_than_10</fullName>
    <active>false</active>
    <errorConditionFormula>IF( LEN( Phone)=10,false,true ) &amp;&amp;  ISPICKVAL(ElixirSuite__Type__c, &apos;Guarantor&apos;)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Phone should be of 10 digits.</errorMessage>
</ValidationRule>