force-app/main/default/objects/Contact/validationRules/State_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>State_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>IF( MailingState =null || MailingState =&apos;&apos; , true, false)&amp;&amp;  ISPICKVAL(ElixirSuite__Type__c, &apos;Guarantor&apos;)</errorConditionFormula>
    <errorDisplayField>MailingState</errorDisplayField>
    <errorMessage>This field is mandatory.</errorMessage>
</ValidationRule>