force-app/main/default/objects/Contact/validationRules/ZipValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>ZipValidation</fullName>
    <active>false</active>
    <errorConditionFormula>If(LEN( MailingPostalCode )=5 || LEN( MailingPostalCode )=9,false,true) &amp;&amp;  ISPICKVAL(ElixirSuite__Type__c, &apos;Guarantor&apos;)</errorConditionFormula>
    <errorDisplayField>MailingPostalCode</errorDisplayField>
    <errorMessage>Zip code size should be 5 or 9</errorMessage>
</ValidationRule>